main page completed

--- a/source/styles/3-basics/_typography.sass
+++ b/source/styles/3-basics/_typography.sass
@@ -1,8 +1,14 @@
 h1
   font-family: 'Playfair Display', serif
+  font-size: 2.5rem
   font-weight: 700
   color: #fff
 
+h2
+  font-family: 'Playfair Display', serif
+  font-size: 1.9rem
+  font-weight: 700
+  color: #fff
 
 
 p
