--- a/source/styles/main.sass
+++ b/source/styles/main.sass
@@ -17,7 +17,10 @@
 
 // 4 - LAYOUT
 @import '4-layout/_nav'
+@import '4-layout/_left-view'
+@import '4-layout/_right-view'
 @import '4-layout/_footer'
+@import '4-layout/_copyright'
 
 // 5 - MODULES
 
