--- a/source/styles/4-layout/_nav.sass
+++ b/source/styles/4-layout/_nav.sass
@@ -23,10 +23,13 @@
     font-family: 'Open Sans', sans-serif
     font-weight: 400
     border-radius: 3px
-    padding: 15px 30px
+    padding: 15px 20px
     text-decoration: none
     text-transform: uppercase
-    margin: 0 20px
+    margin: 0 10px
+
+  a.nav_resp
+    margin: 0
 
 @media only screen and (min-width: 600px)
   // for tablets and desktops
